cmake_minimum_required(VERSION 3.30)
project(YanLib)

set(CMAKE_CXX_STANDARD 17)

add_compile_definitions(UNICODE _UNICODE)

add_library(YanLib STATIC
        src/helper/convert.cpp
        src/helper/convert.h
        src/helper/string.cpp
        src/helper/string.h
        src/helper/autoclean.cpp
        src/helper/autoclean.h
        src/sync/mutex.cpp
        src/sync/mutex.h
        src/sync/fence.cpp
        src/sync/fence.h
        src/sync/rwlock.cpp
        src/sync/rwlock.h
        src/sync/semaphore.cpp
        src/sync/semaphore.h
        src/sync/event.cpp
        src/sync/event.h
        src/sync/timer.cpp
        src/sync/timer.h
        src/sync/barrier.cpp
        src/sync/barrier.h
        src/sync/condvar.cpp
        src/sync/condvar.h
        src/mem/mmap.cpp
        src/mem/mmap.h
        src/mem/allocate.cpp
        src/mem/allocate.h
        src/mem/heap.cpp
        src/mem/heap.h
        src/io/fs.cpp
        src/io/fs.h
        src/io/completion_port.cpp
        src/io/completion_port.h
        src/io/pe32.cpp
        src/io/pe32.h
        src/io/pe64.cpp
        src/io/pe64.h
        src/io/tcp_server.cpp
        src/io/tcp_server.h
        src/io/tcp_client.cpp
        src/io/tcp_client.h
        src/io/udp_server.cpp
        src/io/udp_server.h
        src/io/udp_client.cpp
        src/io/udp_client.h
        src/io/http.cpp
        src/io/http.h
        src/io/ftp.cpp
        src/io/ftp.h
        src/hash/md5.cpp
        src/hash/md5.h
        src/hash/sha1.cpp
        src/hash/sha1.h
        src/hash/sha256.cpp
        src/hash/sha256.h
        src/hash/sha384.cpp
        src/hash/sha384.h
        src/hash/sha512.cpp
        src/hash/sha512.h
        src/crypto/base16.cpp
        src/crypto/base16.h
        src/crypto/base32.cpp
        src/crypto/base32.h
        src/crypto/base58.cpp
        src/crypto/base58.h
        src/crypto/base62.cpp
        src/crypto/base62.h
        src/crypto/base64.cpp
        src/crypto/base64.h
        src/crypto/base85.cpp
        src/crypto/base85.h
        src/crypto/base91.cpp
        src/crypto/base91.h
        src/crypto/base92.cpp
        src/crypto/base92.h
        src/crypto/base100.cpp
        src/crypto/base100.h
        src/crypto/uuencode.cpp
        src/crypto/uuencode.h
        src/crypto/xxencode.cpp
        src/crypto/xxencode.h
        src/crypto/vigenere.cpp
        src/crypto/vigenere.h
        src/crypto/aes.cpp
        src/crypto/aes.h
        src/crypto/aes192.cpp
        src/crypto/aes192.h
        src/crypto/aes256.cpp
        src/crypto/aes256.h
        src/crypto/rsa.cpp
        src/crypto/rsa.h
        src/sys/security.cpp
        src/sys/security.h
        src/sys/proc.cpp
        src/sys/proc.h
        src/sys/thread.cpp
        src/sys/thread.h
        src/sys/thread_pool.cpp
        src/sys/thread_pool.h
        src/sys/fiber.cpp
        src/sys/fiber.h
        src/sys/job.cpp
        src/sys/job.h
        src/sys/snapshot.cpp
        src/sys/snapshot.h
        src/sys/processor.cpp
        src/sys/processor.h
        src/ui/window.cpp
        src/ui/window.h
        src/ui/message.cpp
        src/ui/message.h
        src/ui/dialog.cpp
        src/ui/dialog.h
        src/ui/menu.cpp
        src/ui/menu.h
        src/ui/icon.cpp
        src/ui/icon.h
        src/ui/cursor.cpp
        src/ui/cursor.h
        src/ui/caret.cpp
        src/ui/caret.h
        src/ui/bitmap.cpp
        src/ui/bitmap.h
        src/ui/image.cpp
        src/ui/image.h
        src/ui/clipboard.cpp
        src/ui/clipboard.h
        src/ui/desktop.cpp
        src/ui/desktop.h
        src/ui/keyboard.cpp
        src/ui/keyboard.h
        src/ui/mouse.cpp
        src/ui/mouse.h
        src/ui/touch.cpp
        src/ui/touch.h
        src/ui/accelerator.cpp
        src/ui/accelerator.h
        src/ui/display.cpp
        src/ui/display.h
        src/ui/dc.cpp
        src/ui/dc.h
        src/ui/rect.cpp
        src/ui/rect.h
        src/ui/region.cpp
        src/ui/region.h
        src/ui/font.cpp
        src/ui/font.h
        src/ui/text.cpp
        src/ui/text.h
        src/ui/brush.cpp
        src/ui/brush.h
        src/ui/clip.cpp
        src/ui/clip.h
        src/ui/palette.cpp
        src/ui/palette.h
        src/ui/coordinate.cpp
        src/ui/coordinate.h
)

target_include_directories(YanLib
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

target_include_directories(YanLib
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

include(FetchContent)

FetchContent_Declare(
        googletest
        GIT_REPOSITORY git@github.com:google/googletest.git
        GIT_TAG v1.16.0
)

FetchContent_MakeAvailable(googletest)

enable_testing()

add_subdirectory(test)